Embed 메시지 보낼때 정렬되도록.