@@ -10,6 +10,7 @@ import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
@@ -21,15 +22,22 @@ public class EmbedMessageImpl implements EmbedMessage {
 
 	private final BiConsumer<Long, Consumer<TextChannel>> action;
 
+	// Embed 메시지는 최대 10개씩만 보낼수 있음을 주의.
 	private static List<List<MessageEmbed>> partitioned(Collection<MessageContent.EmbedContent> contents) {
 		return contents.stream()
 				.collect(Collectors.groupingBy(MessageContent.EmbedContent::getUrl))
 				.values()
 				.stream()
+				.sorted(Comparator.comparing(l -> l.get(0)))
+				.map(list -> list.stream()
+						.sorted(MessageContent::compareTo)
+						.toList()
+				)
 				.map(list -> list.stream()
 						.map(EmbedMessageImpl::createMessageEmbed)
-						.collect(Collectors.toList()))
-				.collect(Collectors.toList());
+						.toList()
+				)
+				.toList();
 	}
 
 	private static MessageEmbed createMessageEmbed(MessageContent.EmbedContent content) {
